--- a/index.advanced.html
+++ b/index.advanced.html
@@ -9,6 +9,6 @@
 </head>
 <body class="bg-gray-100 p-8">
 <div id="root"></div>
-<script type="module" src="/src/main.tsx"></script>
+<script type="module" src="/src/advanced/main.tsx"></script>
 </body>
 </html>
